# graphics662-curves

./: .gitignore  CMakeLists.txt  README.md
docs/: Bezier matrix.json  Bezier matrix.tldr  C2 Hermite system.json  C2 Hermite system.tldr
serve/: Curve.html  CurveHTTP.html  CurveWASM.html  curvelib.js
src/: Curve.cpp  Curve.h  CurveBridge.cpp  CurveFunctions.cpp  CurveFunctions.h  CurveHTTPServer.cpp  CurveJSONServer.cpp  CurveManager.h  CurveWSServer.cpp  jsassert.h
test/: CMakeLists.txt  GetBootstrapped.h  GetCalculateHermiteSplineDerivativesForC2Continuity.h  GetComputeBSplineFromInterpolatingPoints.h  GetEvaluateCatmullRomSpline.h  GetEvaluateCubicBSpline.h  GetEvaluateCubicBezierSplineBernstein.h  GetEvaluateCubicBezierSplineCasteljau.h  GetEvaluateCubicBezierSplineMatrix.h  GetEvaluateCubicHermiteSpline.h  PrintToInclude.h  evaluate.cpp  test.py
